[project]
name = "pdm-docker-demo"
version = "0.1.0"
description = "pdm docker demo for codemageddon.me blog"
authors = [
    {name = "Codemageddon", email = "github@codemageddon.me"},
]
dependencies = [
    "click>=8.1.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.8",
]
